--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#container-contact">Contact Me</a></li>
         </ul>
     </nav>
-
+    
 <!-- HOME PAGE -->
 <div class="container-home">
     <div class="intro">
@@ -96,11 +96,10 @@
 <div class="container-contact" id="container-contact">
     <div class="inner-container-contact">
         <h1>CONTACT FORM</h1>
-        <div class="message">
+        <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem aliquam laborum, maxime molestiae odio repellat ut aut, et blanditiis illum porro ipsum odit sapiente sequi excepturi eligendi esse voluptates quae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iure nulla, possimus laudantium qui officia aperiam id nobis quae alias tenetur cum. Laudantium quo ea et in, sequi perspiciatis debitis?
-        </div>
-        <form action="">
-                <div class="form">
+        </p>
+        <form action="" class="form">
                 <div class="left-form">
                     <input type="text" placeholder="Name">
                     <input type="email" placeholder="Email">
@@ -110,7 +109,6 @@
                     <textarea name="message" id="" cols="30" rows="8">Your message here...</textarea>
                     <button type="submit">Send</button>
                 </div>
-            </div>
             </form>
     </div>
 </div>
