--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     <input type="text" placeholder="Name">
                     <input type="email" placeholder="Email">
                     <input type="text" placeholder="Subject">
-                </div>
-                <div class="right-form">
-                    <textarea name="message" id="" cols="30" rows="8">Your message here...</textarea>
+                </div>                
+            <div class="right-form">
+                    <textarea name="message" id="" cols="30" rows="8" placeholder="Your message here.."></textarea>
                     <button type="submit">Send</button>
                 </div>
             </form>
